[gd_scene load_steps=8 format=4 uid="uid://cy675oxgc2edh"]

[ext_resource type="Texture2D" uid="uid://yagrq7cytnxt" path="res://Models/Textures/palette1.png" id="1_nwcoj"]
[ext_resource type="Script" uid="uid://s8bokog38vbm" path="res://Scripts/fridge_door.gd" id="1_vvrpb"]
[ext_resource type="Material" uid="uid://bdr5jc76qtjqa" path="res://Materials/stupid_outline.tres" id="2_vvrpb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_awhho"]
resource_name = "Palette"
cull_mode = 2
albedo_texture = ExtResource("1_nwcoj")
roughness = 0.5
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_ukrr0"]
_surfaces = [{
"aabb": AABB(-91.1416, -4.96406, -136.491, 91.0832, 14.4075, 139.831),
"format": 34359742465,
"index_count": 408,
"index_data": PackedByteArray("AAABAAIAAAACAAMABAACAAEABAADAAIAAAADAAUABAAGAAMABwAAAAUAAAAHAAEABQADAAgABgAIAAMABwAFAAkABQAIAAkACgAGAAQABAABAAoABgALAAgACgALAAYADAAJAAgADQAHAAkADAANAAkADgABAAcADQAOAAcADwAKAAEADgAPAAEAEAALAAoADwAQAAoADwAOABEAEAASAAsAEgAIAAsAEgAMAAgAEgAQABMAEAAPABQADwARABQAEAAUABMADgAVABEAFAARABUADgANABUAEgATABYAFAAWABMADAASABYAFAAVABcADQAXABUAFAAXABYADQAMABcADAAWABcAGAAZABoAGAAbABkAHAAaABkAHQAbABgAHQAYABoAHQAeABsAHAAfABoAHQAaAB8AHgAfABwAHgAdAB8AIAAhACIAIAAjACEAIAAkACMAIQAlACIAIQAmACUAJwAgACIAKAAlACYAKAAmACkAKAApACoAKwAiACUAKwAnACIALAAlACgALAArACUAKAAqAC0ALAAoAC0ALQAqACQAKwAsAC4AJwArAC8AKwAuAC8AJwAvADAAMQAuACwALAAtADEAMQAyAC4ALQAkADMAMQAtADMAIAAzACQANAAyADEAMQAzADQANAA1ADIANgA1ADQANwA0ADMANgA0ADcANwAzACAAJwA3ACAANwAwADYANwAnADAAOAA5ADoAOAA7ADkAPAA6ADkAPQA7ADgAPQA4ADoAPQA+ADsAPAA/ADoAPQA6AD8APgA/ADwAPgA9AD8AQABBAEIAQABDAEEAQABEAEMAQQBFAEIAQQBGAEUARwBAAEIASABFAEYASABGAEkASABJAEoASwBCAEUASwBHAEIATABFAEgATABLAEUASABKAE0ATABIAE0ATQBKAEQASwBMAE4ARwBLAE8ASwBOAE8ARwBPAFAAUQBOAEwATABNAFEAUQBSAE4ATQBEAFMAUQBNAFMAQABTAEQAVABSAFEAUQBTAFQAVABVAFIAVgBVAFQAVwBUAFMAVgBUAFcAVwBTAEAARwBXAEAAVwBQAFYAVwBHAFAA"),
"name": "Palette",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 88,
"vertex_data": PackedByteArray("1EJvvazK5kCFwVVAZmY2wn5PTL6FwVVAZmY2wj0YF0GFwVVAZmY2wj0YF0HBfQjDfki2wqzK5kCFwVVA1EJvvazK5kDBfQjDfki2wqzK5kDBfQjD1EJvvX5PTL6FwVVAZmY2wn5PTL7BfQjD1EJvvX5PTL7BfQjDfki2wn5PTL6FwVVAfki2wn5PTL7BfQjDZmY2wn5PTL5aOQTDZWuKwH5PTL5aOQTDZWuKwH5PTL5AiWDBZmY2wn5PTL5AiWDBsL+twn5PTL5AiWDBZWuKwDxSukBAiWDBsL+twn5PTL5aOQTDsL+twjxSukBAiWDBZmY2wk5SukBAiWDBZWuKwDxSukBaOQTDsL+twjxSukBaOQTDZmY2wk5SukBaOQTDrFgBwZTZnsAEtD3CUTumwjxSukAEtD3CUTumwpTZnsAEtD3CrFgBwTxSukAEtD3CUTumwjxSukAhZCvCrFgBwZTZnsA0RzjCrFgBwTxSukAhZCvCUTumwpTZnsA0RzjCUEOkwq1EgMBO31bC4Iylwofn1UBO31bC0Iylwu1ClMBO31bCP0Okwofn1UBO31bCzpSjwobn1UCqhVXCUTumwpTZnsCqhVXCUDumwonn1UCqhVXCuMwGwe1ClMBO31bCUTumwpTZnsA8ak/CUDumwonn1UA8ak/CzpSjwobn1UA8ak/CrFgBwZTZnsCqhVXCrFgBwZTZnsA8ak/CzpSjwg1ca8A8ak/ColgBwYnn1UA8ak/ColgBwYnn1UCqhVXCK8wGwYnn1UBO31bCzIwWwQRca8A8ak/CwowWwYrn1UA8ak/CzpSjwg1ca8CqhVXCzIwWwQRca8CqhVXCwowWwYrn1UCqhVXCOxkRwYrn1UBO31bCvxgRwahEgMBO31bCrFgBwZTZnsCD2bPCUTumwjxSukCD2bPCUTumwpTZnsCD2bPCrFgBwTxSukCD2bPCUTumwjxSukCRsarCrFgBwZTZnsAbI7HCrFgBwTxSukCRsarCUTumwpTZnsAbI7HCUEOkwq1EgMAob8DC4Iylwofn1UAob8DC0Iylwu1ClMAob8DCP0Okwofn1UAob8DCzpSjwobn1UBWwr/CUTumwpTZnsBWwr/CUDumwonn1UBWwr/CuMwGwe1ClMAob8DCUTumwpTZnsCftLzCUDumwonn1UCftLzCzpSjwobn1UCftLzCrFgBwZTZnsBWwr/CrFgBwZTZnsCftLzCzpSjwg1ca8CftLzColgBwYnn1UCftLzColgBwYnn1UBWwr/CK8wGwYnn1UAob8DCzIwWwQRca8CftLzCwowWwYrn1UCftLzCzpSjwg1ca8BWwr/CzIwWwQRca8BWwr/CwowWwYrn1UBWwr/COxkRwYrn1UAob8DCvxgRwahEgMAob8DC")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ueoa1"]
resource_name = "fridge_door_Cube_418"
_surfaces = [{
"aabb": AABB(-91.1416, -4.96406, -136.491, 91.0832, 14.4075, 139.831),
"attribute_data": PackedByteArray("pWSZPgAZUT6kZJk+CBlRPqRkmT4IGVE+pWSZPgAZUT6lZJk+ABlRPqVkmT4AGVE+pWSZPgAZUT6kZJk+CBlRPqVkmT4AGVE+pGSZPggZUT6lZJk+ABlRPqVkmT4AGVE+pWSZPgAZUT6lZJk+ABlRPqVkmT4AGVE+pWSZPgAZUT6SCpU+YHBVPpIKlT5ocFU+kgqVPmBwVT6SCpU+aHBVPpIKlT5gcFU+kgqVPmBwVT6lZJk+ABlRPqRkmT4IGVE+pWSZPgAZUT6kZJk+CBlRPqVkmT4AGVE+pWSZPgAZUT6lZJk+ABlRPqVkmT4AGVE+kgqVPmRwVT6SCpU+YHBVPpIKlT5kcFU+kgqVPmBwVT6lZJk+ABlRPqRkmT4IGVE+pGSZPggZUT6lZJk+ABlRPvRzBT6ADf898nMFPpAN/z30cwU+gA3/PfJzBT6QDf899HMFPoAN/z30cwU+gA3/PfRzBT6ADf899HMFPoAN/z3ycwU+kA3/PfRzBT6ADf898nMFPpAN/z30cwU+iA3/PY5baj4oHVA+kFtqPiAdUD6OW2o+KB1QPpBbaj4gHVA+kFtqPiAdUD6QW2o+IB1QPpIKlT5gcFU+kgqVPmhwVT6SCpU+YHBVPpIKlT5ocFU+kgqVPmRwVT6SCpU+ZHBVPpIKlT5gcFU+kgqVPmBwVT6SCpU+YHBVPpIKlT5gcFU+9HMFPoAN/z30cwU+gA3/PfRzBT6ADf899HMFPoAN/z147sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4YCEo+eO7FPhgISj547sU+FAhKPnjuxT4UCEo+eO7FPhgISj547sU+FAhKPnjuxT4YCEo+eO7FPhQISj70cwU+gA3/PfRzBT6ADf899HMFPoAN/z30cwU+gA3/PfRzBT6ADf899HMFPoAN/z30cwU+gA3/PfRzBT6ADf899HMFPoAN/z30cwU+gA3/PfRzBT6ADf899HMFPoAN/z147sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPvRzBT6ADf899HMFPoAN/z30cwU+gA3/PfRzBT6ADf89eO7FPhgISj547sU+GAhKPnjuxT4YCEo+eO7FPhgISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhgISj547sU+FAhKPnjuxT4YCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4YCEo+eO7FPhgISj547sU+FAhKPnjuxT4UCEo+eO7FPhgISj547sU+GAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4YCEo+eO7FPhgISj547sU+GAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+9HMFPoAN/z30cwU+gA3/PfRzBT6ADf899HMFPoAN/z147sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4YCEo+eO7FPhgISj547sU+FAhKPnjuxT4UCEo+eO7FPhgISj547sU+FAhKPnjuxT4YCEo+eO7FPhQISj70cwU+gA3/PfRzBT6ADf899HMFPoAN/z30cwU+gA3/PfRzBT6ADf899HMFPoAN/z30cwU+gA3/PfRzBT6ADf899HMFPoAN/z30cwU+gA3/PfRzBT6ADf899HMFPoAN/z147sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPvRzBT6ADf899HMFPoAN/z30cwU+gA3/PfRzBT6ADf89eO7FPhgISj547sU+GAhKPnjuxT4YCEo+eO7FPhgISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhgISj547sU+FAhKPnjuxT4YCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4YCEo+eO7FPhgISj547sU+FAhKPnjuxT4UCEo+eO7FPhgISj547sU+GAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4YCEo+eO7FPhgISj547sU+GAhKPnjuxT4UCEo+eO7FPhQISj547sU+FAhKPnjuxT4UCEo+"),
"format": 34359742487,
"index_count": 408,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEABAABAAUABgAHAAgABgAJAAcACgAHAAkACgALAAcADAANAA4ADAAPAA0AEAARABIAEAATABEAEwAUABEAEwAVABQAFgAXABgAFgAZABcAGgAbABwAGgAdABsAHgAfACAAHgAhAB8AIgAjACQAIgAlACMAJgAnACgAJgApACcAKgAmACgAKQArACcAKgAoACwAKQAtACsALgAqACwALQAvACsALgAsADAALQAxAC8AMQAuADAAMQAwAC8AMgAzADQAMgA1ADMAMgA0ADYAMgA2ADcAOAA5ADoAOAA7ADkAOwA8ADkAOwA9ADwAPgA/AEAAPgBBAD8AQgBDAEQAQgBFAEMARgBHAEgARgBJAEcASgBGAEgASgBLAEYASwBKAEwASwBMAE0ATgBPAFAATgBRAE8AUgBTAFQAUgBVAFMAVgBXAFgAVgBZAFcAWgBbAFwAWgBdAFsAXgBfAGAAXgBhAF8AYgBjAGQAYgBlAGMAZgBnAGgAZgBpAGcAagBrAGwAagBtAGsAbgBqAGwAbgBsAG8AbwBwAG4AbwBxAHAAcgBzAHQAcgB1AHMAdgB3AHgAdgB5AHcAegB7AHwAegB9AHsAfgB/AIAAfgCBAH8AggCDAIQAggCFAIMAhgCHAIgAhgCJAIcAigCLAIwAigCNAIsAjgCPAJAAjgCRAI8AkgCTAJQAkgCVAJMAlgCXAJgAlgCZAJcAmgCbAJwAmgCdAJsAngCaAJwAngCfAJoAnwCeAKAAnwCgAKEAogCjAKQAogClAKMApgCnAKgApgCpAKcAqgCrAKwAqgCtAKsArgCvALAArgCxAK8AsgCzALQAsgC1ALMAtgC3ALgAtgC5ALcAugC7ALwAugC9ALsAvgC/AMAAvgDBAL8AwgC+AMAAwgDAAMMAwwDEAMIAwwDFAMQAxgDHAMgAxgDJAMcAygDLAMwAygDNAMsAzgDPANAAzgDRAM8A0gDTANQA0gDVANMA1gDXANgA1gDZANcA2gDbANwA2gDdANsA3gDfAOAA3gDhAN8A4gDjAOQA4gDlAOMA5gDnAOgA5gDpAOcA"),
"material": SubResource("StandardMaterial3D_awhho"),
"name": "Palette",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 234,
"vertex_data": PackedByteArray("1EJvvazK5kCFwVVAZmY2wn5PTL6FwVVAZmY2wj0YF0GFwVVA1EJvvX5PTL6FwVVAfki2wqzK5kCFwVVAfki2wn5PTL6FwVVA1EJvvazK5kDBfQjDZmY2wn5PTL7BfQjD1EJvvX5PTL7BfQjDZmY2wj0YF0HBfQjDfki2wqzK5kDBfQjDfki2wn5PTL7BfQjD1EJvvX5PTL6FwVVA1EJvvazK5kDBfQjD1EJvvX5PTL7BfQjD1EJvvazK5kCFwVVAsL+twn5PTL5AiWDBZmY2wk5SukBAiWDBsL+twjxSukBAiWDBZmY2wn5PTL5AiWDBZWuKwDxSukBAiWDBZWuKwH5PTL5AiWDB1EJvvazK5kCFwVVAZmY2wj0YF0HBfQjD1EJvvazK5kDBfQjDZmY2wj0YF0GFwVVAfki2wn5PTL6FwVVAfki2wqzK5kDBfQjDfki2wqzK5kCFwVVAfki2wn5PTL7BfQjDsL+twn5PTL5aOQTDsL+twjxSukBAiWDBsL+twjxSukBaOQTDsL+twn5PTL5AiWDBfki2wqzK5kCFwVVAZmY2wj0YF0HBfQjDZmY2wj0YF0GFwVVAfki2wqzK5kDBfQjDZWuKwH5PTL5AiWDBZmY2wn5PTL6FwVVA1EJvvX5PTL6FwVVAZmY2wn5PTL5AiWDBZWuKwH5PTL5aOQTDfki2wn5PTL6FwVVA1EJvvX5PTL7BfQjDsL+twn5PTL5AiWDBZmY2wn5PTL5aOQTDfki2wn5PTL7BfQjDZmY2wn5PTL7BfQjDsL+twn5PTL5aOQTDZmY2wk5SukBAiWDBZWuKwDxSukBaOQTDZmY2wk5SukBaOQTDZWuKwDxSukBAiWDBsL+twjxSukBaOQTDsL+twjxSukBAiWDBZWuKwH5PTL5aOQTDZmY2wk5SukBaOQTDZWuKwDxSukBaOQTDZmY2wn5PTL5aOQTDsL+twjxSukBaOQTDsL+twn5PTL5aOQTDZWuKwH5PTL5AiWDBZWuKwDxSukBaOQTDZWuKwDxSukBAiWDBZWuKwH5PTL5aOQTDrFgBwZTZnsAEtD3CUTumwjxSukAEtD3CUTumwpTZnsAEtD3CrFgBwTxSukAEtD3CUEOkwq1EgMBO31bC4Iylwofn1UBO31bC0Iylwu1ClMBO31bCP0Okwofn1UBO31bCuMwGwe1ClMBO31bCvxgRwahEgMBO31bCK8wGwYnn1UBO31bCOxkRwYrn1UBO31bCzIwWwQRca8A8ak/CzpSjwg1ca8CqhVXCzIwWwQRca8CqhVXCzpSjwg1ca8A8ak/CrFgBwZTZnsA0RzjCrFgBwTxSukAEtD3CrFgBwZTZnsAEtD3CrFgBwTxSukAhZCvCrFgBwZTZnsA0RzjCUTumwpTZnsAEtD3CUTumwpTZnsA0RzjCrFgBwZTZnsAEtD3CUTumwjxSukAhZCvCUTumwpTZnsAEtD3CUTumwjxSukAEtD3CUTumwpTZnsA0RzjCUTumwpTZnsA8ak/CUDumwonn1UCqhVXCUDumwonn1UA8ak/CUTumwpTZnsCqhVXCrFgBwTxSukAhZCvCUTumwpTZnsA0RzjCUTumwjxSukAhZCvCrFgBwZTZnsA0RzjCzIwWwQRca8CqhVXCwowWwYrn1UA8ak/CzIwWwQRca8A8ak/CwowWwYrn1UCqhVXCUTumwpTZnsA8ak/CzpSjwobn1UA8ak/CzpSjwg1ca8A8ak/CUDumwonn1UA8ak/CrFgBwZTZnsA8ak/CzIwWwQRca8A8ak/ColgBwYnn1UA8ak/CwowWwYrn1UA8ak/CrFgBwZTZnsA8ak/CUTumwpTZnsCqhVXCUTumwpTZnsA8ak/CrFgBwZTZnsCqhVXCzpSjwg1ca8A8ak/CzpSjwobn1UCqhVXCzpSjwg1ca8CqhVXCzpSjwobn1UA8ak/CrFgBwZTZnsCqhVXC0Iylwu1ClMBO31bCUTumwpTZnsCqhVXCuMwGwe1ClMBO31bCvxgRwahEgMBO31bCzpSjwg1ca8CqhVXCUEOkwq1EgMBO31bCzIwWwQRca8CqhVXCuMwGwe1ClMBO31bColgBwYnn1UCqhVXCK8wGwYnn1UBO31bCrFgBwZTZnsCqhVXCUEOkwq1EgMBO31bCzpSjwobn1UCqhVXCP0Okwofn1UBO31bCzpSjwg1ca8CqhVXC4Iylwofn1UBO31bCUTumwpTZnsCqhVXC0Iylwu1ClMBO31bCUDumwonn1UCqhVXCOxkRwYrn1UBO31bCzIwWwQRca8CqhVXCvxgRwahEgMBO31bCwowWwYrn1UCqhVXCrFgBwZTZnsCqhVXColgBwYnn1UA8ak/ColgBwYnn1UCqhVXCrFgBwZTZnsA8ak/CrFgBwZTZnsCD2bPCUTumwjxSukCD2bPCUTumwpTZnsCD2bPCrFgBwTxSukCD2bPCUEOkwq1EgMAob8DC4Iylwofn1UAob8DC0Iylwu1ClMAob8DCP0Okwofn1UAob8DCuMwGwe1ClMAob8DCvxgRwahEgMAob8DCK8wGwYnn1UAob8DCOxkRwYrn1UAob8DCzIwWwQRca8CftLzCzpSjwg1ca8BWwr/CzIwWwQRca8BWwr/CzpSjwg1ca8CftLzCrFgBwZTZnsAbI7HCrFgBwTxSukCD2bPCrFgBwZTZnsCD2bPCrFgBwTxSukCRsarCrFgBwZTZnsAbI7HCUTumwpTZnsCD2bPCUTumwpTZnsAbI7HCrFgBwZTZnsCD2bPCUTumwjxSukCRsarCUTumwpTZnsCD2bPCUTumwjxSukCD2bPCUTumwpTZnsAbI7HCUTumwpTZnsCftLzCUDumwonn1UBWwr/CUDumwonn1UCftLzCUTumwpTZnsBWwr/CrFgBwTxSukCRsarCUTumwpTZnsAbI7HCUTumwjxSukCRsarCrFgBwZTZnsAbI7HCzIwWwQRca8BWwr/CwowWwYrn1UCftLzCzIwWwQRca8CftLzCwowWwYrn1UBWwr/CUTumwpTZnsCftLzCzpSjwobn1UCftLzCzpSjwg1ca8CftLzCUDumwonn1UCftLzCrFgBwZTZnsCftLzCzIwWwQRca8CftLzColgBwYnn1UCftLzCwowWwYrn1UCftLzCrFgBwZTZnsCftLzCUTumwpTZnsBWwr/CUTumwpTZnsCftLzCrFgBwZTZnsBWwr/CzpSjwg1ca8CftLzCzpSjwobn1UBWwr/CzpSjwg1ca8BWwr/CzpSjwobn1UCftLzCrFgBwZTZnsBWwr/C0Iylwu1ClMAob8DCUTumwpTZnsBWwr/CuMwGwe1ClMAob8DCvxgRwahEgMAob8DCzpSjwg1ca8BWwr/CUEOkwq1EgMAob8DCzIwWwQRca8BWwr/CuMwGwe1ClMAob8DColgBwYnn1UBWwr/CK8wGwYnn1UAob8DCrFgBwZTZnsBWwr/CUEOkwq1EgMAob8DCzpSjwobn1UBWwr/CP0Okwofn1UAob8DCzpSjwg1ca8BWwr/C4Iylwofn1UAob8DCUTumwpTZnsBWwr/C0Iylwu1ClMAob8DCUDumwonn1UBWwr/COxkRwYrn1UAob8DCzIwWwQRca8BWwr/CvxgRwahEgMAob8DCwowWwYrn1UBWwr/CrFgBwZTZnsBWwr/ColgBwYnn1UCftLzColgBwYnn1UBWwr/CrFgBwZTZnsCftLzC/3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//////////7//////////v/////////+//////////7//////////v/////////+/////f////7////9/////v////3////+/////f////7//////////v/////////+//////////7//////////v/////////+//////////7/4hQX6////v/iFBfr///+/+IUF+v///7/4hQX6////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/////f////7////9/////v////3////+/////f////78GegX6////vwZ6Bfr///+/BnoF+v///78GegX6////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD8F/+//38AAPwX/7//fwAA/Bf/v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////PwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////v/9/j2L///8//3+PYv///z//f49i////P/9/j2L///8/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//38AAP///7//fwAA////v/9/AAD///+//38AAP///7////9/////v////3////+/////f////7////9/////v1u/AAD///+/W78AAP///79bvwAA////v1u/AAD///+/W7///////79bv///////v1u///////+/W7///////7///07A////v///TsD///+///9OwP///7///07A////v///TsD///+///9OwP///7///07A////v///TsD///+/AABOwP///78AAE7A////vwAATsD///+/AABOwP///78AAE7A////vwAATsD///+/AABOwP///78AAE7A////v////3////+/////f////7////9/////v////3////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////v/9/j2L///8//3+PYv///z//f49i////P/9/j2L///8/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//38AAP///7//fwAA////v/9/AAD///+//38AAP///7////9/////v////3////+/////f////7////9/////v1u/AAD///+/W78AAP///79bvwAA////v1u/AAD///+/W7///////79bv///////v1u///////+/W7///////7///07A////v///TsD///+///9OwP///7///07A////v///TsD///+///9OwP///7///07A////v///TsD///+/AABOwP///78AAE7A////vwAATsD///+/AABOwP///78AAE7A////vwAATsD///+/AABOwP///78AAE7A////v////3////+/////f////7////9/////v////3////+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ukrr0")

[sub_resource type="BoxShape3D" id="BoxShape3D_aqgau"]
size = Vector3(1, 2.16217, 1.24316)

[node name="FridgeDoor" type="Node3D"]
transform = Transform3D(1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, 0, 0, 0)
script = ExtResource("1_vvrpb")

[node name="Fridge (Main Door)_001" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-10, 0.01, -4.37114e-10, 0, -4.37114e-10, -0.01, -0.01, -4.37114e-10, 1.91069e-17, 0, 0.0889296, -0.0211923)
mesh = SubResource("ArrayMesh_ueoa1")
skeleton = NodePath("")

[node name="fridge door outline" type="MeshInstance3D" parent="Fridge (Main Door)_001"]
transform = Transform3D(1.03, 1.06581e-14, -1.46682e-28, -1.06581e-14, 1.03, -1.37624e-14, 3.30947e-30, 1.06581e-14, 1.33, 2.24254, 0.68866, 0.0100002)
material_override = ExtResource("2_vvrpb")
mesh = SubResource("ArrayMesh_ueoa1")
skeleton = NodePath("")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.581085, 0.619987)
shape = SubResource("BoxShape3D_aqgau")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
